...
              </TouchableOpacity>
            </View>
          </React.Fragment>
        ))}
        {!isRequesting && (
          <TouchableHighlight
            testID={'LoginButton'}
            onPress={this.handleLogin}
            style={styles.loginButton}
            underlayColor={'white'}
          >
            <Text style={styles.labelField}>
              {isLoggedIn ? 'Sign out' : 'Login'}
            </Text>
          </TouchableHighlight>
        )}
        {isRequesting && (
          <View testID={'Loader'} style={styles.loader}>
            <ActivityIndicator size="large" color="#fffff" />
          </View>
        )}
      </View>
    );
  }
...
